    - swap podtidy's and Pod::Tidy's '=head1 NAME' descriptions
    - add Larry Denneau to CREDITS for reporting test failures caused by
      Module::Build stripping the execute bit from scripts/podtidy.  This bug
      was fixed in the 0.04 release.
    - change podtidy's CREDITS to refer to Pod::Tidy's CREDITS
    - add GOTCHAS and Efficiency concerns to podtidy both referring to Pod::Tidy

- fix test line endings
- working with svn
- swap titles

0.07 Wed Oct  5 23:33:09 HST 2005
    - fix speling, markup, & grammar in Pod::Tidy.pod
    - document that whitespace trailing paragraphs is now stripped in
      Pod::Wrap::Pretty.pod 
    - podtidy documentation grammar fix
    - Pod::Wrap::Pretty.pod grammar fix
    - change Module::Build license spec to 'perl'
    - change Pod::Tidy.pod BUGS -> GOTCHAS and add a Mangled verbatim blocks
      section
    - add DEVELOPER NOTES section to podtidy's documentation
    - update podtidy's and Pod::Tidy.pod's SEE ALSO documentation
    - Pod::Tidy VERSION to '0.07'

0.06 Wed Oct  5 00:17:57 HST 2005
    - fix Pod::Wrap::Pretty's handling of trailing whitespace handling so
      sending the output of podtidy back through podtidy doesn't cause a
      non-deterministic result.
    - Pod::Wrap::Pretty VERSION to '0.02'
    - change Pod::Tidy::build_pod_queue() to 'canonicalize' all input file paths
    - add Pod::Tidy::base()
    - change Pod::Tidy::build_pod_queue()'s ignore pattern matching to try to
      match on the absolute, relative, and 'base' file/dir paths
    - document Pod::Tidy::tidy_files(ignore => ...)
    - Pod::Tidy VERSION to '0.06'
    - add Text::Glob req.
    - switch podtidy from --Ignore regex patterns -> Text::Glob::glob_to_regex()
    - update podtidy Ignore option documentation
    - podtidy VERSION to '0.04'

0.05 Tue Oct  4 15:22:36 HST 2005
    - remove build_req on Test::Pod
    - add recommends Test::Distribution
    - Pod::Tidy VERSION to '0.05'

0.04 Tue Oct  4 15:11:04 HST 2005